packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-09/reproducer.js
function loadAll(pluginNames) {
	pluginNames.foo(); // Noncompliant: pluginNames might be undefined
}

loadAll();
